I added a margin in the div content to fix the overflow issue

--- a/style.css
+++ b/style.css
@@ -9,9 +9,11 @@ a{
     color: grey;
 
 }
+
 .footer{
     padding: 10px;
 }
+
 .header, .footer{
     display: flex;
     justify-content: center;
@@ -24,8 +26,6 @@ body{
     height: 100vh;
     display: flex;
     flex-direction: column;    
-    justify-content: space-between;
-    gap: 20px;
 }
 
 .options{
@@ -38,9 +38,12 @@ body{
 
 .content{
     display: flex;
+    align-items: center;
     justify-content: center;
     flex-wrap: wrap;
-    gap: 50px;
+    flex: 1;
+    gap: 30px;
+    margin: 10px auto;
 }
 
 #Color{
@@ -57,6 +60,7 @@ body{
 h1{
     margin: 10px auto;
 }
+
 .grid{
     display: flex;
     justify-content: center;
